more mobile alignment fixes

--- a/src/scss/pages/_global.scss
+++ b/src/scss/pages/_global.scss
@@ -157,3 +157,10 @@ p {
     font-size:42px;
   }
 }
+
+//@include media-breakpoint-up(xs) { ... }
+@media (max-width: 575px) {
+  body, html {
+    overflow-x: hidden;
+  }
+}
